--- a/docker/runtime/java/handler/pom.xml
+++ b/docker/runtime/java/handler/pom.xml
@@ -42,5 +42,10 @@
         <artifactId>simpleclient_pushgateway</artifactId>
         <version>0.3.0</version>
       </dependency>
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>1.2.17</version>
+      </dependency>
   </dependencies>
 </project>
