giving 8gb to nodejs8 processes

--- a/docker/runtime/nodejs/Dockerfile.8
+++ b/docker/runtime/nodejs/Dockerfile.8
@@ -11,5 +11,4 @@ WORKDIR kubeless_rt/
 RUN npm install
 
 USER 1000
-
-CMD ["node", "kubeless.js"]
+CMD ["node", "--max-old-space-size=8192", "kubeless.js"]
